# hyprland-donation-screen-imgui

./: .clang-format  .editorconfig  .gitignore  README.md  flake.nix  justfile  main.cpp  meson.build
nix/: default.nix  imgui-hypr.nix  imgui-meson.build  plutosvg.nix  plutovg.nix
